--- a/index.html
+++ b/index.html
@@ -123,6 +123,21 @@
           </div>
         </div>
       </section>
+      <section class="reviews"> 
+        <div class="width"> 
+          <div class="reviews-list"> 
+            <div class="reviews-item"> <img class="reviews-qoute" src="./assets/img/quote.svg" alt="">
+              <p class="reviews-desc">“They are the best people. And this is the suitable platform to learn from distance.” Ben Foakes, student.</p>
+              <p class="reviews-author"> <strong>Ben Foakes</strong><span>, student.</span></p>
+              <div class="reviews-icon"> 
+                <button class="btn-icon"> <img src="./assets/img/left.svg" alt=""></button>
+                <button class="btn-icon"> <img src="./assets/img/right.svg" alt=""></button>
+              </div>
+            </div>
+            <div class="reviews-item"> <img class="reviews-avatar" src="./assets/img/rev1.webp" alt="avatar-reviews"><img class="reviews-avatar" src="./assets/img/rev2.jpeg" alt="avatar-reviews"><img class="reviews-avatar" src="./assets/img/rev3.webp" alt="avatar-reviews"><img class="reviews-avatar" src="./assets/img/rev4.webp" alt="avatar-reviews"><img class="reviews-avatar" src="./assets/img/rev5.webp" alt="avatar-reviews"><img class="reviews-avatar" src="./assets/img/rev2.jpeg" alt="avatar-reviews"></div>
+          </div>
+        </div>
+      </section>
     </section>
   </body>
 </html>
