clone footer, suprise

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             </div>
             <div class="hero__content-right"> 
               <div class="image"> <img src="./assets/img/hero_img.jpg" alt=""></div>
-              <div class="reviews"> 
-                <p class="reviews__title">Our active Student </p><img src="./assets/img/avtar1.jpg" alt=""><img src="./assets/img/avtar2.jpg" alt=""><img src="./assets/img/avtar3.jpeg" alt=""><img src="./assets/img/avtar4.jfif" alt=""><img src="./assets/img/avtar1.jpg" alt="">
+              <div class="review"> 
+                <p class="review__title">Our active Student </p><img src="./assets/img/avtar1.jpg" alt=""><img src="./assets/img/avtar2.jpg" alt=""><img src="./assets/img/avtar3.jpeg" alt=""><img src="./assets/img/avtar4.jfif" alt=""><img src="./assets/img/avtar1.jpg" alt="">
               </div>
               <div class="courses"> <img src="./assets/img/Book.svg" alt="">
                 <div class="courses-desc"> 
@@ -138,6 +138,58 @@
           </div>
         </div>
       </section>
+      <section class="suprise"> 
+        <div class="width"> 
+          <div class="suprise__item"> 
+            <div class="suprise__content"> 
+              <h1 class="content__title">Ready to Get Admit</h1>
+              <p class="content__desc">Create your account and Boost your Career.</p>
+            </div>
+            <div class="suprise__cta"> <a class="hero-btn" href="#!">Get Started</a></div>
+          </div>
+        </div>
+      </section>
+      <setion class="footer"> 
+        <div class="width"> 
+          <div class="footer__list"> 
+            <div class="footer__item"> <a class="footer__logo" href="#!"> <img src="./assets/img/Logo.svg" alt=""></a></div>
+            <div class="footer__item"> 
+              <h3 class="footer__heading">Company</h3>
+              <ul class="list__item"> 
+                <li> <a class="footer__link" href="#!">Abouts </a></li>
+                <li> <a class="footer__link" href="#!">Careers</a></li>
+                <li> <a class="footer__link" href="#!">Press</a></li>
+              </ul>
+            </div>
+            <div class="footer__item"> 
+              <h3 class="footer__heading">Comunity</h3>
+              <ul class="list__item"> 
+                <li> <a class="footer__link" href="#!">Temr Plan</a></li>
+                <li> <a class="footer__link" href="#!">Blogs</a></li>
+                <li> <a class="footer__link" href="#!">Student</a></li>
+                <li> <a class="footer__link" href="#!">SchoolarShip</a></li>
+              </ul>
+            </div>
+            <div class="footer__item"> 
+              <h3 class="footer__heading">Teaching</h3>
+              <ul class="list__item"> 
+                <li> <a class="footer__link" href="#!">Become a teacher </a></li>
+                <li> <a class="footer__link" href="#!">Teaching academy</a></li>
+              </ul>
+            </div>
+            <div class="footer__social"> 
+              <h3 class="footer__heading">Be Social </h3>
+              <ul class="list__item"> 
+                <li> <a class="footer__link" href="#!">Facebook </a></li>
+                <li> <a class="footer__link" href="#!">Twiter</a></li>
+                <li> <a class="footer__link" href="#!">Youtube</a></li>
+                <li> <a class="footer__link" href="#!">Instagram</a></li>
+              </ul>
+            </div>
+          </div>
+          <p class="footer__copyright">© Copyright 2020 by Mayad Ahmed. All right reserved.</p>
+        </div>
+      </setion>
     </section>
   </body>
 </html>
