--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body> 
     <section class="wrapper">
+      <div class="loader"> </div>
       <section class="home"> 
         <div class="width">
           <section class="home-navbar"> 
@@ -191,5 +192,6 @@
         </div>
       </setion>
     </section>
+    <script src="./assets/js/script.js"> </script>
   </body>
 </html>
