--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body> 
     <section class="wrapper">
-      <div class="loader"> </div>
+      <section class="loader"> </section>
       <section class="home"> 
         <div class="width">
           <section class="home-navbar"> 
